# excelxtract

./: .gitignore  GEMINI.md  README.md  etl.ipynb  git.txt  main.py  pyproject.toml  test_agent_tools.py
.agrilyzer_cache/: agrilyzer_cache.db
data/: 1_ExemploHarvista.xlsx  manual_schema.txt
output/csv/: 020925_florvicente.csv  080925_florfelipe.csv  121125_florfelipe.csv  130126_frutovicente.csv  141125_florvicente.csv  170925_florvicente.csv  200126_frutofelipe.csv  220925_florfelipe.csv  esquemas.csv  printcampo.csv  printcampo2.csv  template_flor.csv  template_fruto.csv
output/ml_ready/felipe/: felipe_flor_data.csv  felipe_fruto_data.csv
output/ml_ready/vicente/: vicente_flor_data.csv  vicente_fruto_data.csv
reports/: methodology.md  my_prompts.md
src/excelxtract/: __init__.py  agent_tools.py  agrilyzer_plots.py  analysis.py  config.py  loader.py  processor.py  utils.py
