[project]
name = "excelxtract"
version = "0.1.0"
description = "Simple tool to extract data from .xlsx files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "typer>=0.24.1",
]
